--- a/.github/workflows/push-to-production.yml
+++ b/.github/workflows/push-to-production.yml
@@ -56,7 +56,7 @@ jobs:
           DOCKER_APP_NAME: ${{ secrets.DOCKER_APP_NAME }}
         run: |
           echo "$DO_SSH_PRIVATE_KEY" | tr -d '\r' > private_key
-          echo cat private_key
+          cat private_key
           chmod 600 private_key
           ssh -i private_key -o StrictHostKeyChecking=no -t $DO_USER@$DO_SERVER_IP << EOF
             docker pull $DOCKER_HUB_USERNAME/$DOCKER_APP_NAME:latest
