--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.4.0",
     "framer-motion": "^11.2.9",
     "next": "14.2.2",
