--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@nextui-org/react": "^2.4.0",
+    "framer-motion": "^11.2.9",
+    "he": "^1.2.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18"
@@ -26,13 +30,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
     "prettier": "3.2.5",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
