--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "he": "^1.2.0",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.29.0"
   },
   "devDependencies": {
     "@types/node": "^20",
