--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "framer-motion": "^11.2.9",
     "he": "^1.2.0",
     "next": "14.2.2",
+    "openai": "^4.49.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.29.0"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
