Adds secrets at build stage in pipeline

--- a/.github/workflows/push-to-production.yml
+++ b/.github/workflows/push-to-production.yml
@@ -33,6 +33,11 @@ jobs:
           echo "COMMIT_HASH: ${{ env.COMMIT_HASH }}"
 
       - name: Build and push Docker image
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MECE_ORG_OPS_ID: ${{ secrets.OPENAI_MECE_ORG_OPS_ID }}
+          OPENAI_MECE_OPS_ACTIVITY: ${{ secrets.OPENAI_MECE_OPS_ACTIVITY }}
+          OPENAI_RSS_FILTERING_ID: ${{ secrets.OPENAI_RSS_FILTERING_ID }}
         run: |
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_APP_NAME }}:latest -t ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_APP_NAME }}:${{ env.COMMIT_HASH }} .
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_APP_NAME }}:latest
