Fixes nginx conf file

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,74 @@
-server {
-    listen 80;
-    server_name helios-osm.com;
+user  nginx;
+worker_processes  auto;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
-    location / {
-        proxy_pass http://nextjs:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/helios-osm.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/helios-osm.com/privkey.pem;
+events {
+    worker_connections 1024;
 }
 
-server {
-    if ($host = helios-osm.com) {
-        return 301 https://$host$request_uri;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen 80;
+        server_name helios-osm.com;
+
+        location / {
+            proxy_pass http://nextjs:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        listen 443 ssl; # managed by Certbot
+        ssl_certificate /etc/letsencrypt/live/helios-osm.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/helios-osm.com/privkey.pem;
     }
 
-    listen 80;
-    server_name helios-osm.com;
-    return 404;
+    server {
+        if ($host = helios-osm.com) {
+            return 301 https://$host$request_uri;
+        }
+
+        listen 80;
+        server_name helios-osm.com;
+        return 404;
+    }
+
+    server {
+        listen 80;
+        server_name www.helios-osm.com;
+
+        location / {
+            return 301 https://helios-osm.com$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name www.helios-osm.com;
+
+        ssl_certificate /etc/letsencrypt/live/helios-osm.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/helios-osm.com/privkey.pem;
+
+        location / {
+            return 301 https://helios-osm.com$request_uri;
+        }
+    }
 }
