--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build-docker": "bash ./docker-build.sh"
   },
   "lint-staged": {
     "*.{js, jsx,ts,tsx}": [
