--- a/.github/workflows/push-to-production.yml
+++ b/.github/workflows/push-to-production.yml
@@ -38,6 +38,7 @@ jobs:
           OPENAI_MECE_ORG_OPS_ID: ${{ secrets.OPENAI_MECE_ORG_OPS_ID }}
           OPENAI_MECE_OPS_ACTIVITY_ID: ${{ secrets.OPENAI_MECE_OPS_ACTIVITY_ID }}
           OPENAI_RSS_FILTERING_ID: ${{ secrets.OPENAI_RSS_FILTERING_ID }}
+          OPENAI_APP_QUESTIONS_ID: ${{ secrets.OPENAI_APP_QUESTIONS_ID }}
           OPENAI_SAT_APP_ID: ${{ secrets.OPENAI_SAT_APP_ID }}
         run: |
           docker build --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}  --build-arg OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
