--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and fill in your actual values
 
 # OpenAI API Configuration
-# Your OpenAI API key for accessing OpenAI services
+# Your OpenAI API key for accessing OpenAI service
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
 # OpenAI Assistant IDs
